Crash blender 2.80 when I delete data-block video or audio in a video editor. #59691

Closed
opened 2018-12-20 21:05:46 +01:00 by Arsen Mikitov · 9 comments

Crash blender 2.80 when I delete video or audio (or do a unlink data-block with Shift) block of data in a video editor.

Blender 2.80 Beta Linux 64 bit / a91886e76e
Operating system: Ubuntu 18.04
Graphics card: RTX-2080Ti

Blender-Crash.blend

Blender-Crash_01.jpg

Blender-Crash_02.jpg

Crash blender 2.80 when I delete video or audio (or do a unlink data-block with Shift) block of data in a video editor. Blender 2.80 Beta Linux 64 bit / a91886e76ebd Operating system: Ubuntu 18.04 Graphics card: RTX-2080Ti [Blender-Crash.blend](https://archive.blender.org/developer/F6019018/Blender-Crash.blend) ![Blender-Crash_01.jpg](https://archive.blender.org/developer/F6019017/Blender-Crash_01.jpg) ![Blender-Crash_02.jpg](https://archive.blender.org/developer/F6019016/Blender-Crash_02.jpg)
Author

Added subscriber: @ArsenMikitov

Added subscriber: @ArsenMikitov

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2018-12-21 11:06:37 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
BKE_sound_add_scene_sound (scene=0x7fffdc92d008, sequence=0x7fffeaa85888, startframe=1, endframe=495, frameskip=0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sound.c:536
536		void *handle = AUD_Sequence_add(scene->sound_scene, sequence->sound->playback_handle,
(gdb) bt
#0  BKE_sound_add_scene_sound (scene=0x7fffdc92d008, sequence=0x7fffeaa85888, startframe=1, endframe=495, frameskip=0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sound.c:536
#1  0x000055555807fb67 in BKE_sound_add_scene_sound_defaults (scene=0x7fffdc92d008, sequence=0x7fffeaa85888)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sound.c:547
#2  0x000055555805ccd9 in seq_dupli (scene_src=0x7fffffffbf40, scene_dst=0x7fffdc92d008, seq=0x7fffd27aa688, dupe_flag=8, flag=263)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sequencer.c:5493
#3  0x000055555805d174 in BKE_sequence_base_dupli_recursive (scene_src=0x7fffffffbf40, scene_dst=0x7fffdc92d008, nseqbase=0x7fffef0d7810,
    seqbase=0x7fffd2d79c10, dupe_flag=8, flag=263) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sequencer.c:5587
#4  0x000055555802d2f0 in BKE_scene_copy_data (bmain=0x0, sce_dst=0x7fffdc92d008, sce_src=0x7fffffffbf40, flag=263)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:318
#5  0x0000555557f2ef59 in BKE_id_copy_ex (bmain=0x0, id=0x7fffffffbf40, r_newid=0x7fffffffbf20, flag=263, test=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/library.c:597
#6  0x000055555842bff2 in DEG::(anonymous namespace)::scene_copy_inplace_no_main (scene=0x7fffd4e73008, new_scene=0x7fffdc92d008)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:329
#7  0x000055555842ca5d in DEG::deg_expand_copy_on_write_datablock (depsgraph=0x7fffeaae2008, id_node=0x7fffd4bfbf88, node_builder=0x0,
    create_placeholders=false) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:730
#8  0x000055555842d1f7 in DEG::deg_update_copy_on_write_datablock (depsgraph=0x7fffeaae2008, id_node=0x7fffd4bfbf88)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:962
#9  0x000055555842b2bc in DEG::depsgraph_ensure_view_layer (graph=0x7fffeaae2008)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:287
#10 0x000055555842b345 in DEG::deg_evaluate_on_refresh (graph=0x7fffeaae2008)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:307
#11 0x00005555584005dd in DEG_evaluate_on_refresh (graph=0x7fffeaae2008)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_eval.cc:70
#12 0x0000555558030724 in BKE_scene_graph_update_tagged (depsgraph=0x7fffeaae2008, bmain=0x7fffd4f9b208)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1500
#13 0x000055555704c005 in wm_event_do_depsgraph (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:336
#14 0x000055555704c0ea in wm_event_do_refresh_wm_and_depsgraph (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:361
#15 0x000055555704c92a in wm_event_do_notifiers (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:519
- 16 0x0000555557048295 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:430
- 17 0x0000555557042bee in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. BKE_sound_add_scene_sound (scene=0x7fffdc92d008, sequence=0x7fffeaa85888, startframe=1, endframe=495, frameskip=0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sound.c:536 536 void *handle = AUD_Sequence_add(scene->sound_scene, sequence->sound->playback_handle, (gdb) bt #0 BKE_sound_add_scene_sound (scene=0x7fffdc92d008, sequence=0x7fffeaa85888, startframe=1, endframe=495, frameskip=0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sound.c:536 #1 0x000055555807fb67 in BKE_sound_add_scene_sound_defaults (scene=0x7fffdc92d008, sequence=0x7fffeaa85888) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sound.c:547 #2 0x000055555805ccd9 in seq_dupli (scene_src=0x7fffffffbf40, scene_dst=0x7fffdc92d008, seq=0x7fffd27aa688, dupe_flag=8, flag=263) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sequencer.c:5493 #3 0x000055555805d174 in BKE_sequence_base_dupli_recursive (scene_src=0x7fffffffbf40, scene_dst=0x7fffdc92d008, nseqbase=0x7fffef0d7810, seqbase=0x7fffd2d79c10, dupe_flag=8, flag=263) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/sequencer.c:5587 #4 0x000055555802d2f0 in BKE_scene_copy_data (bmain=0x0, sce_dst=0x7fffdc92d008, sce_src=0x7fffffffbf40, flag=263) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:318 #5 0x0000555557f2ef59 in BKE_id_copy_ex (bmain=0x0, id=0x7fffffffbf40, r_newid=0x7fffffffbf20, flag=263, test=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/library.c:597 #6 0x000055555842bff2 in DEG::(anonymous namespace)::scene_copy_inplace_no_main (scene=0x7fffd4e73008, new_scene=0x7fffdc92d008) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:329 #7 0x000055555842ca5d in DEG::deg_expand_copy_on_write_datablock (depsgraph=0x7fffeaae2008, id_node=0x7fffd4bfbf88, node_builder=0x0, create_placeholders=false) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:730 #8 0x000055555842d1f7 in DEG::deg_update_copy_on_write_datablock (depsgraph=0x7fffeaae2008, id_node=0x7fffd4bfbf88) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:962 #9 0x000055555842b2bc in DEG::depsgraph_ensure_view_layer (graph=0x7fffeaae2008) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:287 #10 0x000055555842b345 in DEG::deg_evaluate_on_refresh (graph=0x7fffeaae2008) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:307 #11 0x00005555584005dd in DEG_evaluate_on_refresh (graph=0x7fffeaae2008) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/depsgraph_eval.cc:70 #12 0x0000555558030724 in BKE_scene_graph_update_tagged (depsgraph=0x7fffeaae2008, bmain=0x7fffd4f9b208) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/scene.c:1500 #13 0x000055555704c005 in wm_event_do_depsgraph (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:336 #14 0x000055555704c0ea in wm_event_do_refresh_wm_and_depsgraph (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:361 #15 0x000055555704c92a in wm_event_do_notifiers (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:519 - 16 0x0000555557048295 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:430 - 17 0x0000555557042bee in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521 ```
Sebastian Parborg removed their assignment 2018-12-21 16:27:13 +01:00
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-21 16:27:13 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

I'm guessing that the data is removed but not properly cleaned up...

@Sergey sorry if this is not depsgraph related.

I'm guessing that the data is removed but not properly cleaned up... @Sergey sorry if this is not depsgraph related.

This issue was referenced by d086c01645

This issue was referenced by d086c01645e4f089a0dfb03b0267a7107affc490

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@ZedDB, This isn't really a dependency graph issue. Even without it the crash would have happened when copying scene after removing sound. That's the thing, dependency graph simply exposes all those little mistakes from all over the code base.. The fix is coming though.

@ZedDB, This isn't really a dependency graph issue. Even without it the crash would have happened when copying scene after removing sound. That's the thing, dependency graph simply exposes all those little mistakes from all over the code base.. The fix is coming though.

@Sergey Ok, thanks for fixing!

@Sergey Ok, thanks for fixing!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59691
No description provided.