Fix T59691: Crash when deleting data-block video or audio in a video editor